--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,21 @@
 coo=coo version 1
 foo=foo version 3
+#elasticsearch config
+#es的主机名，可以进入9200端口查看 如 http://127.0.0.1:9200
+es.clusterName=elasticsearch
+#es所在服务器的ip
+es.ip=127.0.0.1
+#java连接es服务的专用端口
+es.port=9300
+#搜索引擎的的索引名
+es.index=m9
+#搜索引擎的索引type名称
+es.type=sum
+
+#datainterface
+#项目的ip与端口号
+ipAndPort=http://127.0.0.1:9090
+#项目名
+project=agrdmp
+#中间文件的存放目录
+filePath=D:\\
